--- a/company_home/package.json
+++ b/company_home/package.json
@@ -8,10 +8,11 @@
     "gatsby": "^5.15.0",
     "gatsby-plugin-image": "^3.15.0",
     "gatsby-plugin-manifest": "^5.15.0",
+    "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.15.0",
     "gatsby-source-filesystem": "^5.15.0",
-    "gatsby-transformer-sharp": "^5.15.0",
     "gatsby-transformer-remark": "^6.15.0",
+    "gatsby-transformer-sharp": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
