--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-mdx": "^5.15.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.15.0",
+    "gatsby-plugin-sitemap": "^6.15.0",
     "gatsby-plugin-svgr": "latest",
     "gatsby-source-filesystem": "^5.15.0",
     "gatsby-transformer-remark": "^6.15.0",
